<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/ui_pc_title_wifi">
        <com.example.kat.pollinghelper.ui.preference.IPPreference
            android:key="@string/key_ip"
            android:title="@string/ui_ip_title"
            android:defaultValue="@string/base_station_ip"
            android:summary="@string/ui_ip_summary"/>
        <com.example.kat.pollinghelper.ui.preference.PortPreference
            android:key="@string/key_port"
            android:title="@string/ui_port_title"
            android:defaultValue="@integer/base_station_port"
            android:summary="@string/ui_port_summary"/>
        <EditTextPreference
            android:key="@string/key_data_request_cycle"
            android:title="@string/ui_ep_data_request_title"
            android:defaultValue="@integer/time_interval_request_data"
            android:summary="@string/ui_ep_data_request_summary"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ui_pc_title_ble">
        <EditTextPreference
            android:key="@string/key_scan_cycle"
            android:title="@string/ui_ep_title_scan_cycle"
            android:defaultValue="@integer/time_interval_scan_ble_communicator"
            android:summary="@string/ui_ep_summary_scan_cycle"
            android:inputType="number"/>
        <EditTextPreference
            android:key="@string/key_scan_duration"
            android:title="@string/ui_ep_title_scan_duration"
            android:defaultValue="@integer/time_duration_scan_ble_communicator"
            android:summary="@string/ui_ep_summary_scan_duration"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ui_pc_title_data_update">
        <EditTextPreference
            android:key="@string/key_data_view"
            android:title="@string/ui_ep_title_data_view"
            android:defaultValue="@integer/time_interval_update_data_view"
            android:summary="@string/ui_ep_summary_data_view"
            android:inputType="number"/>
        <EditTextPreference
            android:key="@string/key_scout_real_time"
            android:title="@string/ui_ep_title_scout_real_time"
            android:defaultValue="@integer/time_interval_update_sensor_data"
            android:summary="@string/ui_ep_summary_scout_real_time"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>