<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sort"
        android:text="@string/tv_sort"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_sort_type"
        android:contentDescription="@string/tv_sort"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_sort_entry_address"
            android:text="@string/rdo_sort_entry_address"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center_vertical|left"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_sort_entry_type"
            android:text="@string/rdo_sort_entry_type"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center_vertical|left"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_sort_entry_time"
            android:text="@string/rdo_sort_entry_time"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center_vertical|left"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdo_sort_entry_unit"
            android:text="@string/rdo_sort_entry_unit"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center_vertical|left"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ascending"
            android:text="@string/btn_sort_order_ascend"
            android:background="@drawable/style_edittext_normal"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_descending"
            android:text="@string/btn_sort_order_descend"
            android:background="@drawable/style_edittext_normal"/>
    </LinearLayout>

</LinearLayout>