<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/li_record_item"
    android:background="@color/background_record_header">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_item_name"
        android:textSize="@dimen/text_size_listitem_record_item"
        android:text="@string/ui_tv_record_item_name"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_item_device"
        android:textSize="@dimen/text_size_listitem_record_item"
        android:text="@string/ui_tv_record_item_device"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_item_value"
        android:textSize="@dimen/text_size_listitem_record_item"
        android:text="@string/ui_tv_record_item_value"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_item_unit"
        android:textSize="@dimen/text_size_listitem_record_item"
        android:text="@string/ui_tv_record_item_unit"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_item_warning"
        android:textSize="@dimen/text_size_listitem_record_item"
        android:text="@string/ui_tv_record_item_warning"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

</LinearLayout>