<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/li_record_mission"
    android:background="@color/background_record_header">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_mission_name"
        android:textSize="@dimen/text_size_listitem_record_mission"
        android:text="@string/ui_tv_record_mission_name"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_mission_finish_time"
        android:textSize="@dimen/text_size_listitem_record_mission"
        android:text="@string/ui_tv_record_finish_time"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_mission_result"
        android:textSize="@dimen/text_size_listitem_record_mission"
        android:text="@string/ui_tv_record_result"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_mission_evaluation"
        android:textSize="@dimen/text_size_listitem_record_mission"
        android:text="@string/ui_tv_record_evaluation"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_mission_remark"
        android:textSize="@dimen/text_size_listitem_record_mission"
        android:text="@string/ui_tv_record_remark"
        android:singleLine="true"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingTop="@dimen/text_padding_record"
        android:paddingBottom="@dimen/text_padding_record"/>

</LinearLayout>